@@ -1,4 +1,5 @@
 0.11
+ - Improve example in Sense documentation.
 
 0.10 2021-07-17T15:11:15+02:00
  - Add test for Wikibase::Datatype::Value::Monolingual with utf8 text.
